# agent-canary

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ORIGIN.md
examples/: progressive_rollout.py
src/agent_canary/: __init__.py  canary.py  decision.py  metrics.py  rollout.py  shadow.py
tests/: test_canary.py  test_decision.py  test_metrics.py  test_rollout.py  test_shadow.py
