[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-canary"
version = "0.1.0"
description = "Progressive rollout, shadow mode, and auto-rollback for AI agents - sticky-percent routing with promote/rollback gates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mirza Causevic" }]
keywords = ["canary", "progressive-rollout", "shadow-deployment", "ai-agents", "platform-engineering", "sre", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/mizcausevic-dev/agent-canary"
Repository = "https://github.com/mizcausevic-dev/agent-canary"
Issues = "https://github.com/mizcausevic-dev/agent-canary/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_canary"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
